--- a/styles.css
+++ b/styles.css
@@ -11,17 +11,15 @@
 }
 
 .color-random-container {
-  height: 100vh;
   width: 75vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
+  justify-content: space-around;
   border-right: solid black 2px;
 }
 
 .title-container {
-  height: 33vh;
-  width: 75vw;
   display:flex;
   justify-content: center;
   align-items: center;
@@ -33,8 +31,6 @@
 }
 
 .color-palette-row-container {
-  height: 34vh;
-  width: 75vw;
   display:flex;
   justify-content: space-around;
   align-items: center;
@@ -54,18 +50,10 @@
 }
 
 .buttons-container {
-  height: 33vh;
-  width: 75vw;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center
-}
-
-.saved-palettes-container {
-  height: 100vh;
-  width: 25vw;
-  display: flex;
 }
 
 .new-palette-button {
@@ -90,4 +78,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+}
+
+.saved-palettes-container {
+  height: 100vh;
+  width: 25vw;
+  display: flex;
 }
