--- a/styles.css
+++ b/styles.css
@@ -74,14 +74,24 @@
 
 .saved-palettes-title-container {
   width: 25vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
+    height: 15vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .saved-palettes-container {
   height: 100vh;
   width: 25vw;
   display: flex;
+  flex-direction: column;
+}
+
+.saved-palettes-display-container {
+  height: 90vh;
+  width: 25vw;
+  display: flex;
+  flex-direction: column;
+  background-color: blue;
 }
