--- a/styles.css
+++ b/styles.css
@@ -93,5 +93,19 @@
   width: 25vw;
   display: flex;
   flex-direction: column;
-  background-color: blue;
+  justify-content: start;
+}
+
+.saved-palette-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.mini-palette-box {
+  width: 50px;
+  height: 50px;
+  border: 2px solid black;
 }
